Fixed slight missalignment between button icons and actual value of votes in posts

--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -28,3 +28,8 @@
 .post-details > * {
   margin-left: 1.1em;
 }
+
+.rating img {
+  height: 1.2em;
+  width: 1.2em;
+}
